--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">upClubApp</string>
+    <string name="item_profile">Profile</string>
+    <string name="item_chats">Chats</string>
+    <string name="item_market">Market</string>
 </resources>
